syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AbilityInvokeEntryHead {
	int32 modifier_config_local_id = 13;
	int32 local_id = 9;
	bool is_serverbuff_modifier = 8;
	uint32 server_buff_uid = 5;
	uint32 target_id = 6;
	uint32 instanced_ability_id = 3;
	uint32 instanced_modifier_id = 10;
}