syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityAttachedModifier.proto";
import "ModifierProperty.proto";
import "AbilityString.proto";
import "ModifierAction.proto";


message AbilityMetaModifierChange {
	int32 modifier_local_id = 14;
	bool is_durability_zero = 11;
	bool is_mute_remote = 7;
	bool is_attached_parent_ability = 5;
	uint32 server_buff_uid = 6;
	uint32 apply_entity_id = 15;
	AbilityString parent_ability_override = 8;
	AbilityString parent_ability_name = 9;
	ModifierAction action = 13;
	AbilityAttachedModifier attached_instanced_modifier = 1;
	repeated ModifierProperty properties = 10;
}