syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityString.proto";


message DetailAbilityInfo {
	int32 modifier_local_id = 15;
	int32 local_id = 14;
	uint32 caster_id = 9;
	uint32 instanced_ability_id = 13;
	uint32 instanced_modifier_id = 2;
	AbilityString parent_ability_name = 12;
}